<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Browse Events"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="8dp"  />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">
        <!-- Search Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/search_bar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- The EditText -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Search events..." />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/filter_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@null"
                android:src="@drawable/ic_menu" />

            <ImageButton
                android:id="@+id/scan_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@null"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_cam" />

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@null"
                android:src="@drawable/ic_forward" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/browse_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/browse_events_card"
        android:listSelector="?android:attr/selectableItemBackground"
        android:focusable="false"
        android:clickable="true" />
</LinearLayout>
