...
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="22sp"
            tools:text="Soccer Tournament" />
...
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Return"
                android:visibility="invisible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_join_waitlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Join Waitlist"
                app:backgroundTint="@color/button_purple" />
        </LinearLayout>
...
